--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.chenankj</groupId>
+  <groupId>com.github.sherlockjun</groupId>
   <artifactId>aip</artifactId>
   <version>1.0</version>
 
   <name>aip</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
+  <description>util for xunfei asr and baidu ocr.</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,21 +39,56 @@
       <version>4.11.3</version>
     </dependency>
 
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.12</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>lfasr-sdk-client</groupId>-->
+      <!--<artifactId>lfasr-sdk-client</artifactId>-->
+      <!--<version>2.0.0.1006</version>-->
+      <!--<scope>system</scope>-->
+      <!--<systemPath>${project.basedir}/lib/lfasr-sdk-client-2.0.0.1006.jar</systemPath>-->
+    <!--</dependency>-->
 
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.9</version>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.21</version>
     </dependency>
 
   </dependencies>
 
   <build>
+
+    <!--<resources>-->
+      <!--<resource>-->
+        <!--<directory>lib/</directory>-->
+        <!--<targetPath>lib/</targetPath>-->
+        <!--<includes>-->
+          <!--<include>*.jar</include>-->
+        <!--</includes>-->
+      <!--</resource>-->
+    <!--</resources>-->
+
+    <!--<plugins>-->
+      <!--<plugin>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+        <!--<version>2.0.3.RELEASE</version>-->
+        <!--<configuration>-->
+          <!--<executable>true</executable>-->
+          <!--<includeSystemScope>true</includeSystemScope>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+
+      <!--&lt;!&ndash;忽略测试启动类&ndash;&gt;-->
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-surefire-plugin</artifactId>-->
+        <!--&lt;!&ndash;<version>${maven-surefire-plugin.version}</version>&ndash;&gt;-->
+        <!--<configuration>-->
+          <!--<skipTests>true</skipTests>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+    <!--</plugins>-->
+
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -69,6 +104,12 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <compilerArgs>
+              <arg>-extdirs</arg>
+              <arg>${project.basedir}\lib</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -76,7 +117,19 @@
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+          <version>2.6</version>
+          <!--<configuration>-->
+            <!--<archive>-->
+              <!--<manifest>-->
+                <!--<addClasspath>true</addClasspath>-->
+                <!--<classpathPrefix>lib/</classpathPrefix>-->
+                <!--<mainClass>com.chenankj.App</mainClass>-->
+              <!--</manifest>-->
+              <!--<manifestEntries>-->
+                <!--<Class-Path>lib/lfasr-sdk-client-2.0.0.1006.jar</Class-Path>-->
+              <!--</manifestEntries>-->
+            <!--</archive>-->
+          <!--</configuration>-->
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -95,7 +148,135 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-dependency-plugin</artifactId>-->
+          <!--<version>3.0.2</version>-->
+          <!--<executions>-->
+            <!--<execution>-->
+              <!--<id>copy-dependencies</id>-->
+              <!--<phase>package</phase>-->
+              <!--<goals>-->
+                <!--<goal>copy-dependencies</goal>-->
+              <!--</goals>-->
+              <!--<configuration>-->
+                <!--<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+                <!--<includeScope>system</includeScope>-->
+              <!--</configuration>-->
+            <!--</execution>-->
+          <!--</executions>-->
+        <!--</plugin>-->
       </plugins>
     </pluginManagement>
   </build>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>SherlockJun</name>
+      <email>woyaonulixuexi87@gmail.com</email>
+      <url>https://github.com/SherlockJun</url>
+    </developer>
+  </developers>
+
+  <scm>
+    <url>https://github.com/SherlockJun/AIP</url>
+    <connection>https://github.com/SherlockJun/AIP.git</connection>
+    <developerConnection>https://github.com/SherlockJun</developerConnection>
+  </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+      <properties>
+        <gpg.executable>gpg.exe</gpg.executable>
+        <gpg.passphrase>passw0rd@xj</gpg.passphrase>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.7</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.5</version>
+            <configuration>
+              <autoVersionSubmodules>true</autoVersionSubmodules>
+              <useReleaseProfile>false</useReleaseProfile>
+              <releaseProfiles>release</releaseProfiles>
+              <goals>deploy</goals>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+              <execution>
+                <id>attach-sources</id>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
