--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.sherlockjun</groupId>
   <artifactId>aip</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
 
   <name>aip</name>
   <url>http://www.example.com</url>
@@ -25,12 +25,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
-    <!--<dependency>-->
-      <!--<groupId>org.projectlombok</groupId>-->
-      <!--<artifactId>lombok</artifactId>-->
-      <!--<optional>true</optional>-->
-    <!--</dependency>-->
 
     <!-- 百度语音识别、ocr识别sdk -->
     <dependency>
@@ -53,44 +47,35 @@
       <version>1.2.21</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.jai-imageio</groupId>
+      <artifactId>jai-imageio-core</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
 
-    <!--<resources>-->
-      <!--<resource>-->
-        <!--<directory>lib/</directory>-->
-        <!--<targetPath>lib/</targetPath>-->
-        <!--<includes>-->
-          <!--<include>*.jar</include>-->
-        <!--</includes>-->
-      <!--</resource>-->
-    <!--</resources>-->
-
-    <!--<plugins>-->
-      <!--<plugin>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-        <!--<version>2.0.3.RELEASE</version>-->
-        <!--<configuration>-->
-          <!--<executable>true</executable>-->
-          <!--<includeSystemScope>true</includeSystemScope>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
-
-      <!--&lt;!&ndash;忽略测试启动类&ndash;&gt;-->
-      <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-surefire-plugin</artifactId>-->
-        <!--&lt;!&ndash;<version>${maven-surefire-plugin.version}</version>&ndash;&gt;-->
-        <!--<configuration>-->
-          <!--<skipTests>true</skipTests>-->
-        <!--</configuration>-->
-      <!--</plugin>-->
-    <!--</plugins>-->
-
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+          <compilerArgs>
+          <arg>-extdirs</arg>
+          <arg>${project.basedir}\lib</arg>
+          </compilerArgs>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+        </plugin>
+
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -102,42 +87,12 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-          <configuration>
-            <compilerArgs>
-              <arg>-extdirs</arg>
-              <arg>${project.basedir}\lib</arg>
-            </compilerArgs>
-          </configuration>
-        </plugin>
-        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.6</version>
-          <!--<configuration>-->
-            <!--<archive>-->
-              <!--<manifest>-->
-                <!--<addClasspath>true</addClasspath>-->
-                <!--<classpathPrefix>lib/</classpathPrefix>-->
-                <!--<mainClass>com.chenankj.App</mainClass>-->
-              <!--</manifest>-->
-              <!--<manifestEntries>-->
-                <!--<Class-Path>lib/lfasr-sdk-client-2.0.0.1006.jar</Class-Path>-->
-              <!--</manifestEntries>-->
-            <!--</archive>-->
-          <!--</configuration>-->
-        </plugin>
-        <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
         </plugin>
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
@@ -149,24 +104,6 @@
           <version>3.0.0</version>
         </plugin>
 
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-dependency-plugin</artifactId>-->
-          <!--<version>3.0.2</version>-->
-          <!--<executions>-->
-            <!--<execution>-->
-              <!--<id>copy-dependencies</id>-->
-              <!--<phase>package</phase>-->
-              <!--<goals>-->
-                <!--<goal>copy-dependencies</goal>-->
-              <!--</goals>-->
-              <!--<configuration>-->
-                <!--<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
-                <!--<includeScope>system</includeScope>-->
-              <!--</configuration>-->
-            <!--</execution>-->
-          <!--</executions>-->
-        <!--</plugin>-->
       </plugins>
     </pluginManagement>
   </build>
