--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,25 @@
       <version>1.4.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.zeroturnaround</groupId>
+      <artifactId>zt-zip</artifactId>
+      <version>1.13</version>
+      <type>jar</type>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.dadiyang</groupId>
+      <artifactId>jave</artifactId>
+      <version>1.0.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
